Added du-path test